[+] New feature added
[*] Bug Fix
[#] Change/Improvement to old code

================================
Qtilities v1.2 Changes
================================
    To see all closed issues in the issue tracker linked to this milestone, see the following page:
    https://github.com/JPNaude/Qtilities/issues/milestones

    General:
    ============================
    [+] Now compiles and runs with the MSVC compiler.
    [+] Improved = operator overloading everywhere. Now check that you don't assign an object to itself.
    [+] Cleaned up Qtilities.pri. The resulting makefile's include paths does not contain duplicates anymore. Thanks to Carel Combrink for the contribution.

    ============================
    QtilitiesLogging:
    ============================
    [#] AbstractLoggerEngine's logMessage() function got a new message type parameter.
    [#] AbstractFormattingEngine is not exported, thus you can subclass it to create your own formatting engines in your own libraries.
    [#] WidgetLoggerEngine::isFormattingEngineConstant() no longer returns true, thus you can formatting messages using your own formatting engines.

    [*] Fixed handling of < and > characters in some engines where these characters has some meaning (XML for example).
    [*] Fixed bug in Logger::loggerEngineReferenceAt() where it did not ignore deleted logger engines during its position calculation.

    ============================
    QtilitiesCore:
    ============================
    [+] Added Factory::categoryForTag().
    [+] Added IFactoryProvider::categoryForTag().
    [+] Added IFactoryProvider::tagCategoryMap().
    [+] Added QtilitiesProcess::newStandardOutputMessage() and QtilitiesProcesss:newStandardErrorMessage().
    [+] Added QtilitiesFileInfo::updateRelativeToPath().
    [+] Added == and != overloads to QtilitiesFileInfo.
    [+] Added Task::setLastRunTime().
    [+] Added new class: FileSetInfo.
    [+] Added FileUtils::toNativeSeparators().