@@ -87,7 +87,7 @@ The master branch host the current development snapshot and might not even build
 \verbatim
 INSTALL (Windows)
 ===============
-This guide is to build v1.1 of Qtilities on Windows (used Windows 7 & XP).
+This guide is to build v1.2 of Qtilities on Windows (used Windows 7 & XP).
 
 To install Qtilities create a folder that will contain all the libraries used. This location will be reffered to as [YOUR_LIB_PATH]. It is assumed that the Qt SDK is insalled as well as git (see Required Software).
 
@@ -255,14 +255,9 @@ When you build the libraries in debug mode, a small letter \p d character is app
 \section tested_environments Tested Environments
 
 At present the libraries have been tested on the following setups:
-- Qt 4.6.2 <-> Qt 4.7.4 / Windows XP / Mingw32
-- Qt 4.6.2 <-> Qt 4.7.4 / Windows 7 / Mingw32
-- Qt 4.6.2 <-> Qt 4.7.4 / Linux (Ubuntu 10.04 x64) / g++
-- Qt 4.6.2 <-> Qt 4.7.4 / Linux (Ubuntu 10.10 x32) / g++
-- Qt 4.6.2 <-> Qt 4.7.4 / Linux (Ubuntu 11.04 x32) / g++
-- Qt 4.6.2 / Windows 7 / MS Visual Studio 2008. Some problems related to template classes (factories etc.) were experienced after the build was done and the headers were included in a different project.
-
-Although %Qtilities have only been tested with Qt 4.6 and the Qt 4.7, it should work with Qt 4.x.
+- <b>Qt Versions:</b> 4.6.2 -> 5 (Should work for any 4.x version...)
+- <b>Operations Systems:</b> Windows XP, Windows 7, Ubuntu 10.04 (x64), Ubuntu 10.10 (x32), Ubuntu 11.04 (x32).
+- <b>Compilters:</b> Mingw32, g++, MS Visual Studio 2008
 
 \section whats_next It Built, What Now?
 
